# AoC2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
01/: a.md  a.py  b.md  b.py
02/: a.md  a.py  b.md  b.py
03/: a.md  a.py  b.md  b.py
04/: a.md  a.py  b.md  b.py
05/: a.py  b.md  b.py
